--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Get started with HTML, CSS and JavaScript">
+  <meta name="author" content="Boys">
+  <title>Foodli</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
 <body>
 
 <p>Click the button to get your coordinates.</p>
