--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Get started with HTML, CSS and JavaScript">
   <meta name="author" content="Rasmus Cederdorff">
+<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 </head>
 
 <body>
   <!-- tabbar navigation -->
-  <header>
-    <img src="http://cederdorff.com/img/logo_inverted.png" alt="Cederdorff logo" class="logo">
-    <nav class="tabbar">
-      <a href="#home" onclick="showPage('home')">Home</a>
-      <a href="#about" onclick="showPage('about')">About</a>
-      <a href="#clients" onclick="showPage('clients')">Clients</a>
-      <a href="#contact" onclick="showPage('contact')">Contact</a>
-    </nav>
-  </header>
-
+  <nav id="tabbar" class="tabbar hide">
+    <a href="#home" onclick="showPage('home')">Home</a>
+    <a href="#about" onclick="showPage('about')">About</a>
+    <a href="#clients" onclick="showPage('clients')">Clients</a>
+    <a href="#profile" onclick="showPage('profile')">Profile</a>
+  </nav>
 
   <!-- pages -->
   <!-- home page -->
@@ -50,17 +47,35 @@
   </section>
 
   <!-- contact page -->
-  <section id="contact" class="page">
+  <section id="profile" class="page">
     <header class="topbar">
-      <h2>Contact</h2>
+      <h2>Profile</h2>
+      <a class="right" href="#" onclick="logout()">Logout</a>
     </header>
-    <p>So, contact info?</p>
-    <p><a href="mailto:race@eaaa.dk">race@eaaa.dk</a></p>
-    <a href="http://cederdorff.com" target="_blank">
-      <img src="img/logo.png" alt="Cederdorff logo" class="logo">
-    </a>
+
   </section>
 
+  <section id="login" class="page">
+    <header class="topbar">
+      <h2>Login</h2>
+    </header>
+    <!-- firebase auth container  -->
+    <section id="firebaseui-auth-container"></section>
+  </section>
+
+  <!-- loader  -->
+  <div id="loader">
+    <div class="spinner"></div>
+  </div>
+
+
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
+
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-firestore.js"></script>
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <!-- main js file -->
   <script src="js/main.js"></script>
 </body>
