--- a/index.html
+++ b/index.html
@@ -15,24 +15,23 @@
 <body>
   <!-- tabbar navigation -->
   <nav id="tabbar" class="tabbar hide">
+    <a href="#about" onclick="showPage('about')">Settings</a>
     <a href="#home" onclick="showPage('home')">Home</a>
-    <a href="#about" onclick="showPage('about')">About</a>
-    <a href="#profile" onclick="showPage('profile')">Profile</a>
+    <a href="#profile" onclick="showPage('profile')">Favorites</a>
   </nav>
-
   <!-- pages -->
   <!-- home page -->
-  <section id="home" class="page">
+  <section id="about" class="page">
     <header class="topbar">
-      <h2>Home</h2>
+      <h2>Settings</h2>
     </header>
     <p>My Single Page Web App Template</p>
   </section>
 
   <!-- about page -->
-  <section id="about" class="page">
+  <section id="home" class="page">
     <header class="topbar">
-      <h2>About</h2>
+      <h2>home</h2>
     </header>
     <p>This is my about page</p>
   </section>
