temp, no changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <title>SINGLE PAGE WEB APP TEMPLATE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Get started with HTML, CSS and JavaScript">
-  <meta name="author" content="Rasmus Cederdorff">
+  <meta name="description" content="restaurant finder">
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,11 +20,9 @@
   </nav>
   <!-- pages -->
   <!-- home page -->
-  <section id="about" class="page">
-    <header class="topbar">
-      <h2>Settings</h2>
-    </header>
-    <p>My Single Page Web App Template</p>
+  <section id="about" class="page settings">
+    <div>
+    </div>
   </section>
 
   <!-- about page -->
@@ -67,7 +64,6 @@
   <div id="loader">
     <div class="spinner"></div>
   </div>
-
 
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
