--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="restaurant finder">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
@@ -23,6 +24,7 @@
   <!-- pages -->
   <!-- Settings page -->
   <section id="settings" class="page">
+    <div id="profile_img" class="profile_img"></div>
     <div id="profile" class="profile">
     </div>
     <div class="discover">
