--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="searcharea">
       <p>Search Area <span id="demo2"></span></p>
       <div class="slidecontainer">
-        <input type="range" min="100" max="5000" value="2500" class="slider" id="myRange" onchange="getLocation()">
+         <!--PUT THIS ONE BACK: onchange="getLocation()" -->
+        <input type="range" min="100" max="5000" step="100" value="1500" class="slider" id="myRange">
       </div>
     </div>
     <div class="location">
