--- a/index.html
+++ b/index.html
@@ -94,7 +94,45 @@
   <!-- Favorites page -->
 
   <section id="favorites" class="page">
+    <div class="tinder">
+      <div class="tinder--status">
+        <i class="fas fa-times"></i>
+        <i class="fa fa-heart"></i>
+      </div>
 
+      <div class="tinder--cards">
+        <div class="tinder--card">
+          <img src="https://placeimg.com/600/300/people">
+          <h3>Demo card 1</h3>
+          <p>This is a demo for Tinder like swipe cards</p>
+        </div>
+        <div class="tinder--card">
+          <img src="https://placeimg.com/600/300/animals">
+          <h3>Demo card 2</h3>
+          <p>This is a demo for Tinder like swipe cards</p>
+        </div>
+        <div class="tinder--card">
+          <img src="https://placeimg.com/600/300/nature">
+          <h3>Demo card 3</h3>
+          <p>This is a demo for Tinder like swipe cards</p>
+        </div>
+        <div class="tinder--card">
+          <img src="https://placeimg.com/600/300/tech">
+          <h3>Demo card 4</h3>
+          <p>This is a demo for Tinder like swipe cards</p>
+        </div>
+        <div class="tinder--card">
+          <img src="https://placeimg.com/600/300/arch">
+          <h3>Demo card 5</h3>
+          <p>This is a demo for Tinder like swipe cards</p>
+        </div>
+      </div>
+
+      <div class="tinder--buttons">
+        <button id="nope"><i class="fas fa-times"></i></button>
+        <button id="love"><i class="fa fa-heart"></i></button>
+      </div>
+    </div>
 
   </section>
 
@@ -119,6 +157,7 @@
   <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-firestore.js"></script>
   <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <!-- main js file -->
+  <script src='https://hammerjs.github.io/dist/hammer.min.js'></script>
   <script src="js/main.js"></script>
 </body>
 
