--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <!-- Settings page -->
   <section id="settings" class="page">
     <div id="profile_img" class="profile_img"></div>
+    <div class="change_pic">
+    </div>
     <div id="profile" class="profile">
     </div>
     <div class="discover">
@@ -34,7 +36,7 @@
     <div class="searcharea">
       <p>Search Area <span id="demo2"></span></p>
       <div class="slidecontainer">
-         <!--PUT THIS ONE BACK: onchange="getLocation()" -->
+        <!--PUT THIS ONE BACK: onchange="getLocation()" -->
         <input type="range" min="100" max="5000" step="100" value="1500" class="slider" id="myRange">
       </div>
     </div>
