--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
+
 </head>
 
 <body>
   <!-- tabbar navigation -->
   <nav id="tabbar" class="tabbar hide">
-    <a href="#settings" onclick="showPage('settings')">Settings</a>
-    <a href="#home" onclick="showPage('home')">Home</a>
-    <a href="#favorites" onclick="showPage('favorites')">Favorites</a>
+    <a href="#settings" onclick="showPage('settings')"><i class="fas fa-cog"></i></a>
+<a href="#home" onclick="showPage('home')"><img src="billeder/logo.png" img draggable="false" class="logo" alt="Foodlii-Logo"></a></li>
+    <a href="#favorites" onclick="showPage('favorites')"><i class="far fa-heart"></i></a>
   </nav>
   <!-- pages -->
   <!-- Settings page -->
@@ -38,7 +39,7 @@
       <p>Search Area <span id="demo2"></span></p>
       <div class="slidecontainer">
 
-        <!--PUT THIS ONE BACK: onchange="getLocation()" -->
+        <!--PUT THIS ONE BACK: onchange="getLocation()"-->
         <input type="range" min="100" max="5000" step="100" value="1500" class="slider" id="myRange">
 
       </div>
