Nyt login design

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
   </section>
 
   <section id="login" class="page">
-    <header class="topbar">
-      <h2>Login</h2>
-    </header>
+    <div class="looogin">
+      <img src="billeder/logo.png" img draggable="false" class="loogin" alt="Foodlii-Logo">
+</div>
     <!-- firebase auth container  -->
     <section id="firebaseui-auth-container"></section>
   </section>
