--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav id="tabbar" class="tabbar hide">
     <a href="#settings" onclick="showPage('settings')"><i class="fas fa-cog"></i></a>
 <a href="#home" onclick="showPage('home')"><img src="billeder/logo.png" img draggable="false" class="logo" alt="Foodlii-Logo"></a></li>
-    <a href="#favorites" onclick="showPage('favorites')"><i class="far fa-heart"></i></a>
+    <a href="#favorites" onclick="showPage('favorites')"><i class="fas fa-list-alt"></i></a>
   </nav>
   <!-- pages -->
   <!-- Settings page -->
