Detailed favorites works

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
 
   <section id="favorites" class="page">
 <div id="fetchfavorite"></div>
-
   </section>
 
   <section id="login" class="page">
@@ -122,7 +121,9 @@
     <!-- firebase auth container  -->
     <section id="firebaseui-auth-container"></section>
   </section>
+<section id="detailedView">
 
+</section>
   <!-- loader  -->
   <div id="loader">
     <div class="spinner"></div>
