--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
 
 
 </head>
@@ -41,8 +45,8 @@
       <p>Search Area <span id="demo2"></span></p>
       <div class="slidecontainer">
 
-        <!--PUT THIS ONE BACK: onchange="getLocation()"-->
-        <input type="range" min="100" max="5000" step="100" value="1500" class="slider" id="myRange">
+
+        <input type="range" min="100" max="5000" step="100" value="2500" class="slider" id="myRange" onchange="getLocation()">
 
       </div>
     </div>
@@ -59,7 +63,7 @@
     </button>
 
     <div class="clear_history">
-      <button onclick="clearAlert()">Clear discover history</button>
+      <button onclick="clearAlert(),removeAllFavourites()">Clear discover history</button>
     </div>
 
     <div class="contact_law">
@@ -94,6 +98,7 @@
 
   <!-- Home page -->
   <section id="home" class="page">
+      <i onclick="document.location.reload(true)" class="fas fa-redo"><br><p class="reload_text">Reload page for more restaurants</p></i>
     <div class="tinder">
       <div class="tinder--status">
         <i class="fas fa-times"></i>
@@ -106,6 +111,7 @@
       <button id="love"><i class="fa fa-heart"></i></button>
     </div>
     </div>
+
   </section>
 
   <!-- Favorites page -->
